--- a/index.html
+++ b/index.html
@@ -590,45 +590,42 @@
         </div>
     </section>
 
-    <section class="container hover-prize">
-        <p>[ Affordable Prizes ]</p>
-        <h3>Our Dry Cleaning & Prices </h3>
-        <h6>Our prices are simple and affordable which are easy on pocket
-            in comparison with the high street prices
-        </h6>
+    <section class="washing-machine">
+        <div class="machine">
+            <img src="images/Laundrydownload.webp" alt="">
+        </div>
 
+        <div class="content-upon-washing-machine">
+            <p>[ Laundry service for your business! ]</p>
+            <h1>Commercial Laundry
+                Service
+            </h1>
 
-        <div class="prize-carousel"> 
-            <div class="price-tag-container"> <!---====BLANKET PRICE====-->
-                <img src="images/towel.png">
-                <h2>Blanket Service</h2>
-                <p>Washed and Press</p>
-                <h4>N5000</h4>
-            </div>
+            <h5>Large corporations have determined that there is a financial
+                benefit to outsourcing back office work because it saves money.
+                Allowing us to do your laundry is cost effective and
+                will allow you and your employees to focus on your core business.
+                We offer smart solutions to meet your commercial laundry needs.
+                Our Commercial Laundry Clients include:
+            </h5>
 
-            <div class="price-tag-container"> <!---====BLANKET PRICE====-->
-                <img src="images/double-bed.png">
-                <h2>Bedding</h2>
-                <p>Washed and Press</p>
-                <h4>N2000</h4>
-            </div>
+            <div class="col-list">
+                <ul class="col-list1">
+                    <li>Salons & Spas</li>
+                    <li>Restaurants and Caterers</li>
+                    <li>Religious Organizations</li>
+                    <li>Daycare centers</li>
+                </ul>
 
-            <div class="price-tag-container"> <!---====BLANKET PRICE====-->
-                <img src="images/towel.png">
-                <h2>Blanket Service</h2>
-                <p>Washed and Press</p>
-                <h4>N5000</h4>
-            </div>
-            
-            <div class="price-tag-container"> <!---====BLANKET PRICE====-->
-                <img src="images/towel.png">
-                <h2>Blanket Service</h2>
-                <p>Washed and Press</p>
-                <h4>N5000</h4>
+                <ul class="col-list1">
+                    <li>Assisted Living / Nursing</li>
+                    <li>Hotels & Motels</li>
+                    <li>Nail Salons</li>
+                    <li>Athletic Facilities / Gyms</li>
+                </ul>
             </div>
         </div>
     </section>
-
 
 
 
@@ -660,6 +657,10 @@
                     },
                 }
                });
+
+
+
+               
            });
        </script>
 
