--- a/index.html
+++ b/index.html
@@ -591,38 +591,25 @@
     </section>
 
     <section class="washing-machine">
-        <div class="machine">
-            <img src="images/Laundrydownload.webp" alt="">
+        <div class="machine download-pic">
+            <img src="images/Laundrydownload.webp">
         </div>
 
         <div class="content-upon-washing-machine">
-            <p>[ Laundry service for your business! ]</p>
-            <h1>Commercial Laundry
-                Service
+            <p>[ Order Even Faster ]</p>
+            <h1>Tap.Clean.Deliver
             </h1>
 
-            <h5>Large corporations have determined that there is a financial
-                benefit to outsourcing back office work because it saves money.
-                Allowing us to do your laundry is cost effective and
-                will allow you and your employees to focus on your core business.
-                We offer smart solutions to meet your commercial laundry needs.
-                Our Commercial Laundry Clients include:
+            <h5>Download the our app and request our laundry service.
+                Your clothes washed, folded and delivered to your doorstep.
+                So go ahead and say yes to more time with the family, more happy hours,
+                and more slapping the snooze button every morning — we've got laundry day covered.
             </h5>
 
             <div class="col-list">
-                <ul class="col-list1">
-                    <li>Salons & Spas</li>
-                    <li>Restaurants and Caterers</li>
-                    <li>Religious Organizations</li>
-                    <li>Daycare centers</li>
-                </ul>
+               <img src="images/Googleplayicon.png" alt="">
 
-                <ul class="col-list1">
-                    <li>Assisted Living / Nursing</li>
-                    <li>Hotels & Motels</li>
-                    <li>Nail Salons</li>
-                    <li>Athletic Facilities / Gyms</li>
-                </ul>
+               <img src="images/Apple Store.png" alt="">
             </div>
         </div>
     </section>
