--- a/index.html
+++ b/index.html
@@ -590,12 +590,12 @@
         </div>
     </section>
 
-    <section class="washing-machine">
-        <div class="machine download-pic">
+    <section class="washing-machine change-direction">
+        <div class="machine1">
             <img src="images/Laundrydownload.webp">
         </div>
 
-        <div class="content-upon-washing-machine">
+        <div class="content-upon-washing-machine change-absolute">
             <p>[ Order Even Faster ]</p>
             <h1>Tap.Clean.Deliver
             </h1>
