--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
 
                 <div class="statement">
-                    <h4>[ Alternations & Repairs ]</h4>
+                    <h4>Alternations & Repairs</h4>
                     <p>We have expert seamstress and tailors  on staff to ensure
                         we meet and exceeds  your fitting requirements.
                     </p>
@@ -590,10 +590,10 @@
         </div>
     </section>
 
-    <section class="washing-machine change-direction">
-        <div class="machine1">
+    <section class="washing-machine changedirection">
+        <!-- <div class="machine3">
             <img src="images/Laundrydownload.webp">
-        </div>
+        </div> -->
 
         <div class="content-upon-washing-machine change-absolute">
             <p>[ Order Even Faster ]</p>
@@ -644,11 +644,7 @@
                     },
                 }
                });
-
-
-
-               
-           });
+            });
        </script>
 
 
