--- a/index.html
+++ b/index.html
@@ -591,9 +591,9 @@
     </section>
 
     <section class="washing-machine changedirection">
-        <!-- <div class="machine3">
+        <div class="machine3">
             <img src="images/Laundrydownload.webp">
-        </div> -->
+        </div>
 
         <div class="content-upon-washing-machine change-absolute">
             <p>[ Order Even Faster ]</p>
