--- a/index.html
+++ b/index.html
@@ -614,6 +614,19 @@
         </div>
     </section>
 
+    <section class="delivery-bus">
+        <img src="images/promo-img-01.png" alt="">
+
+        <div class="container bus-info">
+            <h3>Quality Service with Free<span> Collection and Delivery</span></h3>
+            <p>It is our goal to offer you 
+            the best laundry and dry cleaning available
+            </p>
+
+            <h1>+234 (80) 235-42-997</h1>
+        </div>
+    </section>
+
 
 
     <!-- =============
