--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         </div>
     </section>
 
-    <section class="delivery-bus">
+    <section class="container delivery-bus">
         <img src="images/promo-img-01.png" alt="">
 
         <div class="container bus-info">
