--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         </div>
     </section>
 
-    <section class="container delivery-bus">
+    <section class="delivery-bus">
         <img src="images/promo-img-01.png" alt="">
 
         <div class="container bus-info">
@@ -622,10 +622,14 @@
             <p>It is our goal to offer you 
             the best laundry and dry cleaning available
             </p>
-
             <h1>+234 (80) 235-42-997</h1>
         </div>
     </section>
+
+    <div>
+        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.5145972027653!2d3.4135304142664133!3d6.45629072573345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b343fe39dc5%3A0x4b2f9e86768b702d!2s58%20Ilupeju%20St%2C%20Ikoyi%20101323%2C%20Lagos!5e0!3m2!1sen!2sng!4v1634137538715!5m2!1sen!2sng"
+            class="map" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
+    </div>
 
 
 
