--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 
     <div>
         <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.5145972027653!2d3.4135304142664133!3d6.45629072573345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b343fe39dc5%3A0x4b2f9e86768b702d!2s58%20Ilupeju%20St%2C%20Ikoyi%20101323%2C%20Lagos!5e0!3m2!1sen!2sng!4v1634137538715!5m2!1sen!2sng"
-            class="map" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
+            class="map"  allowfullscreen="" loading="lazy"></iframe></p>
     </div>
 
 
