--- a/index.html
+++ b/index.html
@@ -590,6 +590,22 @@
         </div>
     </section>
 
+
+
+
+
+   
+
+
+
+
+
+
+
+
+
+
+
     <section class="washing-machine changedirection">
         <div class="machine3">
             <img src="images/Laundrydownload.webp">
@@ -635,6 +651,34 @@
      <!-- GOOGLE MAP ENDS-->
 
 
+
+
+
+
+
+
+
+     
+<!-- ===================
+.-- DUMMY SECTION <--
+====================== -->
+
+<div class="overall">
+    <div></div>
+
+    <span class="main-text">
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Dolores qui rem, ex error saepe deserunt voluptates ipsum praesentium,
+            officia mollitia temporibus quisquam amet quidem,
+            aliquam corrupti eos sapiente doloremque quod?
+        </h4>
+
+        <h2>SHOLA AKINTOLA</h2>
+        <p>Senir Enterprise Business Development</p>
+    </span>
+
+
+</div>
 
     <!-- =============
     CAROUSEL SCRIPT...
