--- a/index.html
+++ b/index.html
@@ -665,7 +665,10 @@
 
 
 
-
+<div class="opt-links">
+    <a href="">Home</a>
+    <a href="" class="management">Mangement Team</a>
+</div>
 
     <!-- =============
     CAROUSEL SCRIPT...
