--- a/index.html
+++ b/index.html
@@ -665,9 +665,9 @@
 
 
 
-<div class="opt-links">
-    <a href="">Home</a>
-    <a href="" class="management">Mangement Team</a>
+<div class="team-carousel">
+   <h3>Kemi Wilson</h3>
+   <p>Chief Operating Officer</p>
 </div>
 
     <!-- =============
