--- a/index.html
+++ b/index.html
@@ -660,15 +660,20 @@
 
      
 <!-- ===================
-.-- DUMMY SECTION <--
+.-- EVENTS AND PREPARATION <--
 ====================== -->
 
 
+    <div>
+        <div></div>
 
-<div class="team-carousel">
-   <h3>Kemi Wilson</h3>
-   <p>Chief Operating Officer</p>
-</div>
+        <span class="">
+            <h4>CrusaderSterling Pension to present at the Global 
+                Financial Service Confrences
+            </h4>
+            <p>Sept 14, 2021 at 3:00 ET</p>
+        </span>
+    </div>
 
     <!-- =============
     CAROUSEL SCRIPT...
