--- a/index.html
+++ b/index.html
@@ -664,10 +664,10 @@
 ====================== -->
 
 
-    <div>
+    <div class="events">
         <div></div>
 
-        <span class="">
+        <span class="event-text">
             <h4>CrusaderSterling Pension to present at the Global 
                 Financial Service Confrences
             </h4>
