--- a/index.html
+++ b/index.html
@@ -673,6 +673,16 @@
             </h4>
             <p>Sept 14, 2021 at 3:00 ET</p>
         </span>
+
+
+        <div></div>
+
+        <span class="event-text">
+            <h4>CrusaderSterling Pension to present at the Global 
+                Financial Service Confrences
+            </h4>
+            <p>Sept 14, 2021 at 3:00 ET</p>
+        </span>
     </div>
 
     <!-- =============
