--- a/index.html
+++ b/index.html
@@ -654,41 +654,31 @@
 
 
 
-
-
-
-
      
 <!-- ===================
-.-- EVENTS AND PREPARATION <--
+.-- REGISTARS <--
 ====================== -->
 
+<div class="registar">
+   <span class="reg-text">
+       <h3>REGISTARS:</h3>
+        <p>CardinaStone Registar Limited.
+            358 Hubert Marculey Way,Sabo Abeokuta.
+            Telephone No: 01- 712 0900 & 01- 792 4462.
+        </p>
+    </span> 
+</div>
 
-    <div class="events">
-        <div></div>
 
-        <span class="event-text">
-            <h4>CrusaderSterling Pension to present at the Global 
-                Financial Service Confrences
-            </h4>
-            <p>Sept 14, 2021 at 3:00 ET</p>
-        </span>
-
-
-        <div></div>
-
-        <span class="event-text">
-            <h4>CrusaderSterling Pension to present at the Global 
-                Financial Service Confrences
-            </h4>
-            <p>Sept 14, 2021 at 3:00 ET</p>
-        </span>
-    </div>
+   
 
 
 
 
-    
+
+
+
+
     <!-- =============
     CAROUSEL SCRIPT...
     ===================-->
