--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
    <span class="reg-text">
        <h3>REGISTARS:</h3>
         <p>CardinaStone Registar Limited.
-            358 Hubert Marculey Way,Sabo Abeokuta.
+            358 Hubert Marculey Way,Sabo Lagos.
             Telephone No: 01- 712 0900 & 01- 792 4462.
         </p>
     </span> 
