--- a/index.html
+++ b/index.html
@@ -656,17 +656,11 @@
 
      
 <!-- ===================
-.-- REGISTARS <--
+.-- DOWNLOAD LINKS <--
 ====================== -->
 
-<div class="registar">
-   <span class="reg-text">
-       <h3>REGISTARS:</h3>
-        <p>CardinaStone Registar Limited.
-            358 Hubert Marculey Way,Sabo Lagos.
-            Telephone No: 01- 712 0900 & 01- 792 4462.
-        </p>
-    </span> 
+<div class="free">
+    
 </div>
 
 
