--- a/index.html
+++ b/index.html
@@ -660,7 +660,10 @@
 ====================== -->
 
 <div class="free">
-    
+    <span>Directors standing for re-election</span>
+
+    <h4>Nov 2021</h4>
+    <p>DOWNLOAD LINKS</p>
 </div>
 
 
