--- a/index.html
+++ b/index.html
@@ -661,9 +661,11 @@
 
 <div class="free">
     <span>Directors standing for re-election</span>
-
-    <h4>Nov 2021</h4>
-    <p>DOWNLOAD LINKS</p>
+    
+    <aside>
+        <h4>Nov 2021</h4>
+        <p>DOWNLOAD LINKS</p>
+    </aside>
 </div>
 
 
