--- a/index.html
+++ b/index.html
@@ -656,17 +656,20 @@
 
      
 <!-- ===================
-.-- DOWNLOAD LINKS <--
+.-- PERSONAL PAGES <--
 ====================== -->
 
-<div class="free">
-    <span>Directors standing for re-election</span>
-    
-    <aside>
-        <h4>Nov 2021</h4>
-        <p>DOWNLOAD LINKS</p>
-    </aside>
-</div>
+<figure>
+    <img src="images/Blue Coats.jpg" alt="Personal-images">
+
+    <div>
+        <h3>Kemi Wilson</h3>
+        <p>Chief Operating Officer</p>
+        <img src="">
+    </div>
+</figure>
+
+
 
 
    
