--- a/index.html
+++ b/index.html
@@ -659,37 +659,57 @@
 .-- PERSONAL PAGES <--
 ====================== -->
 
-<figure>
-    <img src="imags/Blue Coats.jpg" class="personal-img">
+<div class="wrap-all">
+    <div>
+        <figure>
+            <img src="imags/Blue Coats.jpg" class="personal-img">
 
-    <div class="dtl-linkedin">
-        <h3>Kemi Wilson</h3>
-        <p>Chief Operating Officer</p>
+            <div class="dtl-linkedin">
+                <h3>Kemi Wilson</h3>
+                <p>Chief Operating Officer</p>
+            </div>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="11.344" height="13.31" viewBox="0 0 11.344 13.31">
+                <defs>
+                <style>
+                    .cls-1 {
+                    fill: #fff;
+                    fill-rule: evenodd;
+                    }
+                </style>
+                </defs>
+                <path id="Icon" class="cls-1" d="M553.842,1248.35h2.54v9.15h-2.54v-9.15Zm9.457,0.1a0.23,0.23,0,0,0-.08-0.02l-0.1-.03a2.065,2.065,0,0,0-.456-0.05,3.465,3.465,0,0,0-2.729,1.75v-1.75h-2.54v9.15h2.54v-4.99s1.919-3.14,2.729-.83v5.82H565.2v-6.18A2.932,2.932,0,0,0,563.3,1248.45Zm-8.215-4.27a1.479,1.479,0,1,1-1.242,1.46A1.368,1.368,0,0,1,555.084,1244.18Z" transform="translate(-553.844 -1244.19)"/>
+            </svg>
+
+        </figure>
+
+        <div class="figure">
+            <select name="cars" id="cars">
+                <option value="Kemi">Kemi Wilson</option>
+                <option value="saab">Saab</option>
+                <option value="mercedes">Mercedes</option>
+                <option value="audi">Audi</option>
+            </select>
+        </div>
     </div>
 
-    <svg xmlns="http://www.w3.org/2000/svg" width="11.344" height="13.31" viewBox="0 0 11.344 13.31">
-        <defs>
-          <style>
-            .cls-1 {
-              fill: #fff;
-              fill-rule: evenodd;
-            }
-          </style>
-        </defs>
-        <path id="Icon" class="cls-1" d="M553.842,1248.35h2.54v9.15h-2.54v-9.15Zm9.457,0.1a0.23,0.23,0,0,0-.08-0.02l-0.1-.03a2.065,2.065,0,0,0-.456-0.05,3.465,3.465,0,0,0-2.729,1.75v-1.75h-2.54v9.15h2.54v-4.99s1.919-3.14,2.729-.83v5.82H565.2v-6.18A2.932,2.932,0,0,0,563.3,1248.45Zm-8.215-4.27a1.479,1.479,0,1,1-1.242,1.46A1.368,1.368,0,0,1,555.084,1244.18Z" transform="translate(-553.844 -1244.19)"/>
-    </svg>
-
-</figure>
-
-    <div class="figure">
-        <select name="cars" id="cars">
-            <option value="Kemi">Kemi Wilson</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
-        </select>
+     
+    <!-- ===================
+    .-- HER DESCRIPTION <--
+    ====================== -->
+    <div>
+        <h1>Kemi Wilson</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Odit facere odio molestias dignissimos magni. 
+            Mollitia esse nemo dolor qui quae eligendi nihil
+             hic necessitatibus itaque, excepturi suscipit
+              quisquam vel molestiae!
+            </p>
     </div>
+</div>
 
+
+</body>
 
    
 
