--- a/index.html
+++ b/index.html
@@ -652,29 +652,12 @@
 
 
 
-<!-- =======
-PROCESS....
-============ -->
-
-<!-- ==============
-CUSTOMERS REVIEW...
-===================-->
-
-<div class="pic-review">
-    <div class="pic-frame">  <!--1st Review with Pic-->
-        <img src="" alt="">
-        <p class="abs">95%</p>
-    </div> <!--1st Review with Pic ENDS-->
-
-    <div class="review-heading"> <!--1st Review heading-->
-        <h4>Satisfied Customers</h4>
-        <br>
-        <p>There are many variations of passages
-         of Lorem Ipsum available,
-            but the majority have suffered alteration in some form,</p>
-    </div> <!--1st Review heading ENDS-->
+<!-- ====================
+VIDEO BESIDE WHY CHOOSE 
+============ ============-->
+<div class="review-video">
+    
 </div>
-
 
 </body>
 
