--- a/index.html
+++ b/index.html
@@ -630,6 +630,10 @@
         </div>
     </section>
 
+
+    <!-- ==========
+    DEVELIVERY BUS
+    =============== -->
     <section class="delivery-bus">
         <img src="images/promo-img-01.png" alt="">
 
